# PCSE-Gym

./: .buildinfo  .gitignore  CNAME  README.md  demo.py  evaluate_agent.py  examples.html  genindex.html  index.html  installation.html  modules.html  objects.inv  pcse_gym.envs.html  pcse_gym.html  pcse_gym.utils.html  pcse_patch.patch  py-modindex.html  pyproject.toml  search.html  searchindex.js  train_winterwheat.py  usecases.html
.doctrees/: environment.pickle  examples.doctree  index.doctree  installation.doctree  modules.doctree  pcse_gym.doctree  pcse_gym.envs.doctree  pcse_gym.utils.doctree  usecases.doctree
.github/workflows/: documentation.yml  test.yml
_notebooks_old/nitrogen-winterwheat/: Lintul-Wofost.ipynb  PCSE-Gym-Wofost.ipynb  lintul-wofost.patch  pcse-lintul3.patch  train.py
_notebooks_old/nitrogen-winterwheat/results/: model-1.csv  model-15.csv  model-42.csv  model-5.csv  model-74.csv  model-75.csv  model-DQN-2.csv  model-DQN-3.csv  model-DQN-5.csv  model-PPO-default-5.csv  upperbound.csv
_notebooks_old/tutorials/: Advanced_Machine_Learning_CropGym_Tutorial.ipynb  Advanced_machine_learning_RL_exercise.ipynb
_sources/: index.rst.txt  modules.rst.txt  pcse_gym.envs.rst.txt  pcse_gym.rst.txt  pcse_gym.utils.rst.txt  usecases.rst.txt
doc/: conf.py  examples.rst  index.rst  installation.rst  usecases.rst
docs/: index.rst
notebooks/nitrogen-winterwheat/: Paper-Cropgym.ipynb  cropgym-stats.pkl  demo_PCSE_gym.ipynb  demo_PCSE_gym.pkl  example-drought.ipynb  example-evaluation.ipynb  extended_demo_PCSE_gym.ipynb  fixed.csv  helper.py  lintul3.patch  model-74.csv  model-75.csv  model-79.csv  pcse.patch  results_paper.ipynb  train.py  visualize_results.ipynb  wofost_results_lt.csv  wrapper.py
notebooks/tutorials/: Advanced_Machine_Learning_CropGym_Tutorial.ipynb
pcse-gym/environment/: env.py
pcse_gym/environment/: env.py
pcse_gym/envs/: common_env.py  constraints.py  measure.py  rewards.py  sb3.py  winterwheat.py
pcse_gym/utils/: acquire_mean_std.py  defaults.py  eval.py  nitrogen_helpers.py  nitrogen_utils.py  normalization.py  plotter.py  process_pcse_output.py  rllib_helpers.py  weather_plots.py
tests/: UnitTest.ipynb  initialize_env.py  model-1.onnx  model-1.pkl  test_ceres.py  test_constraints.py  test_env_functions.py  test_env_zero.py  test_model.py  test_n_utils.py  test_normalization.py  test_obs_cost.py  test_reward.py
tutorials/: basic.md  basic.py  customization.md  customization.py
(+56 files in other folders)
